What could docs & training for AI governance look like? (#1087)
* Initial content generation experiment

* Content hacking

* More edits

* Edits

* Edits

* Minor edits

* Put use cases under umbrella categories

* Consistency edits, content improvements

* Update home page & edits

* Fix børked links

* Simplify title

* Change links to margin footnotes, other formatting fixes

* Massaging text for .tour-bg

* AI governance local edits

* EU AI Act edits

* Model risk management edits

* Library and platform edits

* Use case compliance include

* SR 11-7 edit

* SS1/23 edit

* E-23 edit

* Training: Consistency & subtitle card edits

* Training: Minor styling edit

* Update site/about/use-cases/model-risk-management.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Rename topic to match short title

* Remove latinisms

* Update site/about/overview.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Update site/about/use-cases/ai-governance.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Update site/about/use-cases/ai-governance.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

* Address review comments

* Minor addition to E-23 guide

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/get-started/get-started.qmd
+++ b/site/get-started/get-started.qmd
@@ -36,6 +36,8 @@ listing:
     fields: [title, description]
 ---
 
+Our quickstarts are the quickest and easiest ways to try out our product features.
+
 :::{#quickstart}
 :::
 
