--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -20,8 +20,9 @@ listing:
     - program/learning-paths.qmd
     - program/sample-training-plan.qmd
     - program/training-faq.qmd
-  - id: training-courses
+  - id: training-product
     type: grid
+    grid-columns: 3
     max-description-length: 250
     image-height: 225px
     sort: false
@@ -32,6 +33,16 @@ listing:
       image: developer-fundamentals/developer-fundamentals.png
     - path: validator-fundamentals/validator-fundamentals-register.qmd
       image: validator-fundamentals/validator-fundamentals.png
+    fields: [image, title, description]
+  - id: training-use-cases
+    type: grid
+    grid-columns: 3
+    max-description-length: 250
+    image-height: 225px
+    sort: false
+    contents:
+    - path: ai-governance/ai-governance-register.qmd
+      image: ai-governance/ai-governance.png
     fields: [image, title, description]
   - id: sample-notebooks
     type: default
@@ -78,8 +89,8 @@ listing:
 **{{< var validmind.training >}}**
 :::
 
-:::: {.f4 .w-60}
-Our **free** training courses make navigating **AI and governance** straightforward, practical, and even fun — gain **hands-on experience** and discover the platform that simplifies **model risk management**!
+:::: {.f4 .w-80}
+Gain **practical experience** and discover what the platform has to offer with our **hands-on** training courses.
 :::
 
 :::
@@ -93,9 +104,14 @@ Our **free** training courses make navigating **AI and governance** straightforw
 :::{#training-curriculum}
 :::
 
-## Available courses
+## Using the product
 
-:::{#training-courses}
+:::{#training-product}
+:::
+
+## Use cases
+
+:::{#training-use-cases}
 :::
 
 ## Available videos
