Edit: Workflow Approval conditional requirements

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -44,12 +44,19 @@ Conditional requirements are required or optional for the following step types:^
 
 ### {{< fa users >}} Approval [required]{.smallercaps .pink}
 
-1. Click **{{< fa plus >}} Add Rule** under [approval group]{.smallcaps} to set your `AND` conditions.^[One approver per rule must provide approval.]
+1. Under **[approval group]{.smallcaps}**, click **{{< fa plus >}} Add Individual Approver** to set an individual approver selected from **User Roles**,^[[Manage roles](/guide/configuration/manage-roles.qmd)] **Model Stakeholder Types**,^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User** type model inventory fields:^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)]
 
-    Select from either **User Roles**,^[[Manage roles](/guide/configuration/manage-roles.qmd)] **Model Stakeholder Types**,^[[Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)] or **User Type** inventory field^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
-    ] for your **[approval group]{.smallcaps}**.
+    - Click **{{< fa plus >}} Add Rule** to add an individual rule.
+    - Click **{{< fa square-plus >}} Add Group** to add a group of rules.
 
-2. Select the **[fields to review]{.smallcaps}** shown to your [approval group]{.smallcaps}s as read-only fields.
+    One approver per rule or rule group must provide approval. If you've set multiple rules or rule groups, select whether they are `AND` or `OR` conditions.
+
+
+2. (Optional) Add more individual rule or rule group approvers as required.
+
+    If you've set multiple individual approvers, select whether they are `AND` or `OR` conditions.
+
+3. Select the **[fields to review]{.smallcaps}** shown to your [approval group]{.smallcaps}s as read-only fields.
 
 <!-- - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved. -->
 
