Edit: Manage use cases

--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -62,27 +62,28 @@ In order to delete a business unit, there must be no models attached to that uni
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workspace, select **Organization**.
+1. Under Models, select **Model Inventory Fields**.
 
-1. Add or and delete use cases as required.
+1. In the Default Fields group, hover over the **Use Case** field.
+
+1. Under the [actions]{.smallcaps} column, click **{{< fa ellipsis-vertical >}}** and select **{{< fa pencil >}} Edit Details** to add or delete use cases and use case groups as required.[^2]
 
 ::: {.panel-tabset}
 
-#### Add use cases
+### Add use cases and use case groups
 
 {{< include _add-use-cases.qmd >}}
 
-#### Remove use cases
+### Remove use cases and use case groups
 
-::: {.callout-important}
-In order to delete a use case, there must be no models associated with it.
+::: {.callout-important title="Use case and use case group deletion is permanent and cannot be undone."}
+- In order to delete a use case, there must be no models associated with it.
+- Deleting a use case group will not delete use cases under that group — use cases will be categorized as ungrouped.
 :::
 
-a. Hover over the use case you want to delete.
+a. Hover over the use case or use case group you want to delete.
 
-b. When the **{{< fa ellipsis-vertical >}}** appears, click on it.
-
-c. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
+b. If you are sure you want to remove the use case, click **{{< fa trash-can >}} Delete Use Case** to delete it.
 
 :::
 
@@ -106,3 +107,5 @@ c. If you are sure you want to remove the use case, click **{{< fa trash-can >}}
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^2]: To edit the display behavior of this field on models and model registration, refer to: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#add-or-edit-inventory-fields)
