--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -141,11 +141,11 @@ Get your organization ready for use by first defining business units and use cas
 
 ::: {.panel-tabset}
 
-#### Add business units
+### Add business units
 
 {{< include /guide/configuration/_add-business-units.qmd >}}
 
-#### Add use cases
+### Add use cases
 
 {{< include /guide/configuration/_add-use-cases.qmd >}}
 
