--- a/site/guide/configuration/_use-cases.qmd
+++ b/site/guide/configuration/_use-cases.qmd
@@ -1,1 +1,1 @@
-A *use case* is a specific application of analytics and management techniques within an organization, such as attrition management, call routing, and regulatory compliance processes like BSA/AML, CCAR, and CECL.
+A *use case* is a specific application of analytics and management techniques within an organization. Use cases can be categorized into groups in accordance to your unique requirements.
