--- a/site/guide/configuration/_add-business-units.qmd
+++ b/site/guide/configuration/_add-business-units.qmd
@@ -12,6 +12,10 @@ a. Click **{{< fa plus >}} Add Business Unit** to save your changes.
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_business-units.qmd >}}
 
+a. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+a. Under Workspace, select **Organization**.
+
 a. Click **{{< fa plus >}} Add New Business Unit** under Business Units.
 
 a. Enter in your **[business unit name]{.smallcaps}**.
