--- a/site/guide/configuration/set-up-your-organization.qmd
+++ b/site/guide/configuration/set-up-your-organization.qmd
@@ -62,11 +62,9 @@ In order to delete a business unit, there must be no models attached to that uni
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Models, select **Model Inventory Fields**.
+2. Under Models, select **Model Inventory Fields**.
 
-1. In the Default Fields group, hover over the **Use Case** field.
-
-1. Under the [actions]{.smallcaps} column, click **{{< fa ellipsis-vertical >}}** and select **{{< fa pencil >}} Edit Details** to add or delete use cases and use case groups as required.[^2]
+3. In the Default Fields group, click on the **Use Case** field to add or delete use cases and use case groups as required.[^2]
 
 ::: {.panel-tabset}
 
