--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -135,10 +135,6 @@ Business units & use cases
 
 Get your organization ready for use by first defining business units and use cases:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Workspace, select **Organization**.
-
 ::: {.panel-tabset}
 
 ### Add business units
@@ -170,16 +166,17 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/settings/organization" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings/inventory-model-custom-fields" background-interactive="true" data-preload="yes"}
 
-:::: {.slideover--l .auto-collapse-10}
+:::: {.slideover--r .three-quarters .auto-collapse-10}
 ::: {.tc}
 **Add a use case**
 :::
 
-1. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-2. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-3. Click **{{< fa plus >}} Add Use Case** to save your changes.
+1. Click on the **Use Case** field under Default Fields.
+2. Type in your use case name under **[options and groups]{.smallcaps}**.
+3. Click **{{< fa plus >}} Add Option** to add the use case to the list. (Optional) Click and hold to drag and drop the use case to a group.
+4. Click **Save Configuration** to save the inserted use case.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
