--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -1,5 +1,11 @@
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_use-cases.qmd >}}
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+1. Under Models, select **Model Inventory Fields**.
+
+1. In the Default Fields group, click on the **Use Case** field to add use cases and use case groups.
 ::::
 
 
@@ -19,9 +25,9 @@ a. Click **Save Configuration** to save the inserted use case group.
 
 #### Add use case option
 
-To add an individual use case option.
+To add an individual use case option:
 
-a. Type in your group title under **[options and groups]{.smallcaps}**.
+a. Type in your use case name under **[options and groups]{.smallcaps}**.
 
 a. Click **{{< fa plus >}} Add Option** to add the use case to the list.
 
