docs: Edit use cases expanded functionality (#1101)
* Edit: Manage use cases

* Training edit

--- a/site/guide/configuration/_add-use-cases.qmd
+++ b/site/guide/configuration/_add-use-cases.qmd
@@ -1,22 +1,36 @@
-:::: {.content-visible unless-format="revealjs"}
-a. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
-
-a. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
-
-a. Click **{{< fa plus >}} Add Use Case** to save your changes.
-
-   After you save, confirm that the use case was added as a new entry in alphabetical order.
-
-::::
-
 :::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/configuration/_use-cases.qmd >}}
 
-a. Click **{{< fa plus >}} Add New Use Case** under Use Cases.
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-a. Enter in the **[title]{.smallcaps}** and select a **[category]{.smallcaps}** for your use case.
+1. Under Models, select **Model Inventory Fields**.
 
-a. Click **{{< fa plus >}} Add Use Case** to save your changes.
-
-   After you save, confirm that the use case was added as a new entry in alphabetical order.
+1. In the Default Fields group, click on the **Use Case** field to add use cases and use case groups.
 ::::
+
+
+#### Add use case group
+
+To add a grouping for use cases:
+
+a. Type in your group title under **[options and groups]{.smallcaps}**.
+
+a. Click **{{< fa chevron-down >}}** next to {{< fa plus >}} Add Option.
+
+a. Select **{{< fa plus >}} Add Group** then click **{{< fa plus >}} Add Group** to insert the group.
+
+a. Click **Save Configuration** to save the inserted use case group.
+
+   After you save, confirm that the use case group was added as a new entry at the bottom of the group list.
+
+#### Add use case option
+
+To add an individual use case option:
+
+a. Type in your use case name under **[options and groups]{.smallcaps}**.
+
+a. Click **{{< fa plus >}} Add Option** to add the use case to the list.
+
+a. (Optional) Hover over your use case, then click and hold to drag and drop the use case to a group.
+
+a. Click **Save Configuration** to save the inserted use case.
