--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -189,7 +189,11 @@ To group artifact fields, first create an artifact field group:
     Click, hold, and drag to the right to reveal additional columns.
     :::
 
-[^4]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
+[^4]:
+
+    This count only applies to custom fields.<br>
+
+    [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^5]: [Artifact field types](#artifact-field-types)
 
