--- a/site/guide/model-validation/_add-edit-artifact-fields.qmd
+++ b/site/guide/model-validation/_add-edit-artifact-fields.qmd
@@ -6,11 +6,15 @@
 
 To add a new artifact field, click **{{< fa plus >}} Add Field**:
 
-a. Artifact fields require a **[type]{.smallcaps}**,^[[Artifact field types](/guide/model-validation/manage-artifact-fields.qmd#artifact-field-types)] a **[name]{.smallcaps}**, and a **[artifact type]{.smallcaps}**.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
+a. Artifact fields require you to enter a **[title]{.smallcaps}** (name), as well as select a field **[type]{.smallcaps}**^[[Artifact field types](/guide/model-validation/manage-artifact-fields.qmd#artifact-field-types)] and an **[artifact type]{.smallcaps}**.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
 
-    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
-    - (Optional) You can also choose to indicate that a field is **[required when creating artifacts]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.^[[Add artifact field groups](/guide/model-validation/manage-artifact-fields.qmd#add-artifact-field-groups)]
+a. Include optional information for your artifact field:
+
+    - Enter a custom field **[key]{.smallcaps}**.^[If left blank, a key will be automatically generated in `camelCase` format.]
+    - Enter a **[description]{.smallcaps}** to indicate the purpose of the field displayed on the list of fields.
+    - Enter **[help text]{.smallcaps}** to provide guidance to users on how best to fill out that field.
+    - Check off whether or not the field should be **[required on artifact creation]{.smallcaps}**.
+    - Assign a field to a group.^[Ungrouped fields will be listed under No Group: [Add artifact field groups](/guide/model-validation/manage-artifact-fields.qmd#add-artifact-field-groups)]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles. Leave this field blank for default permissions where only the [{{< fa hand >}} Customer Admin]{.bubble} role has write access.[^edit-artifact-fields]
 
 a. When you are satisfied with the setup of your artifact field, click **Save**.
