--- a/site/guide/model-validation/_add-edit-artifact-fields.qmd
+++ b/site/guide/model-validation/_add-edit-artifact-fields.qmd
@@ -56,12 +56,16 @@ a. Make your desired changes to your artifact field, then click **Save**.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Click on an existing field to edit that field.
 
-1. Artifact fields require a **[type]{.smallcaps}**, a **[name]{.smallcaps}**, and a **[artifact type]{.smallcaps}**.
+1. Artifact fields require you to enter a **[title]{.smallcaps}** (name), as well as select a field **[type]{.smallcaps}** and an **[artifact type]{.smallcaps}**.
 
-    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
-    - (Optional) You can also choose to indicate that a field is **[required when creating artifacts]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
+1. Include optional information for your artifact field:
+
+    - Enter a custom field **[key]{.smallcaps}**. If left blank, a key will be automatically generated in `camelCase` format.
+    - Enter a **[description]{.smallcaps}** to indicate the purpose of the field displayed on the list of fields.
+    - Enter **[help text]{.smallcaps}** to provide guidance to users on how best to fill out that field.
+    - Check off whether or not the field should be **[required on artifact creation]{.smallcaps}**.
+    - Assign a field to a group. Ungrouped fields will be listed under No Group.
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles. Leave this field blank for default permissions where only the [{{< fa hand >}} Customer Admin]{.bubble} role has write access.
 
 1. When you are satisfied with the setup of your artifact field, click **Save**.
 
