--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -170,7 +170,7 @@ Manage model inventory fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
+2. Enter a **[title]{.smallcaps}** (name) and select the field **[type]{.smallcaps}**.
 3. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -313,7 +313,7 @@ Manage artifact (finding) fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
+2. Enter a **[title]{.smallcaps}** (name) and select the field **[type]{.smallcaps}**.
 3. Select the **[artifact types]{.smallcaps}** this field is available on.
 4. Click **Save** to add your field.
 
