--- a/site/guide/model-validation/_add-edit-artifact-fields.qmd
+++ b/site/guide/model-validation/_add-edit-artifact-fields.qmd
@@ -6,7 +6,7 @@
 
 To add a new artifact field, click **{{< fa plus >}} Add Field**:
 
-a. Artifact fields require you to enter a **[title]{.smallcaps}** (name), as well as select a field **[type]{.smallcaps}**^[[Artifact field types](/guide/model-validation/manage-artifact-fields.qmd#artifact-field-types)] and an **[artifact type]{.smallcaps}**.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
+a. Artifact fields require you to enter a **[title]{.smallcaps}** (name), select a field **[type]{.smallcaps}**,^[[Artifact field types](/guide/model-validation/manage-artifact-fields.qmd#artifact-field-types)] and indicate what **[artifact types]{.smallcaps}**^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] the field is available on.
 
 a. Include optional information for your artifact field:
 
@@ -56,7 +56,7 @@ a. Make your desired changes to your artifact field, then click **Save**.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Click on an existing field to edit that field.
 
-1. Artifact fields require you to enter a **[title]{.smallcaps}** (name), as well as select a field **[type]{.smallcaps}** and an **[artifact type]{.smallcaps}**.
+1. Artifact fields require you to enter a **[title]{.smallcaps}** (name), select a field **[type]{.smallcaps}**, and indicate what **[artifact types]{.smallcaps}** the field is available on.
 
 1. Include optional information for your artifact field:
 
