--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -6,11 +6,15 @@
 
 To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
-a. Inventory fields require a **[type]{.smallcaps}**^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] and a **[name]{.smallcaps}**.
+a. Inventory fields require you to enter a **[title]{.smallcaps}** (name) and select a **[type]{.smallcaps}**.^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)]
 
-    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
-    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
+a. Include optional information for your field:
+
+    - Enter a custom field **[key]{.smallcaps}**.^[If left blank, a key will be automatically generated in `camelCase` format.]
+    - Enter a **[description]{.smallcaps}** to indicate the purpose of the field displayed on the list of fields.
+    - Enter **[help text]{.smallcaps}** to provide guidance to users on how best to fill out that field.
+    - Check off whether or not the field should be **[required on new model registration]{.smallcaps}**.
+    - Assign a field to a group.^[Ungrouped fields will be listed under No Group: [Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles. Leave this field blank for default permissions where only the [{{< fa hand >}} Customer Admin]{.bubble} role has write access.[^edit-fields]
 
 a. When you are satisfied with the setup of your inventory field, click **Save**.
@@ -87,12 +91,16 @@ a. Click **Save Configuration** to apply your changes.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Click on an existing field to edit that field.
 
-1. Custom inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
+1. Custom inventory fields require you to enter a **[title]{.smallcaps}** (name) and select a **[type]{.smallcaps}**.
 
-    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
-    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles.
+1. Include optional information for your field:
+
+    - Enter a custom field **[key]{.smallcaps}**. If left blank, a key will be automatically generated in `camelCase` format.
+    - Enter a **[description]{.smallcaps}** to indicate the purpose of the field displayed on the list of fields.
+    - Enter **[help text]{.smallcaps}** to provide guidance to users on how best to fill out that field.
+    - Check off whether or not the field should be **[required on new model registration]{.smallcaps}**.
+    - Assign a field to a group. Ungrouped fields will be listed under No Group.
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types or user roles. Leave this field blank for default permissions where only the [{{< fa hand >}} Customer Admin]{.bubble} role has write access.
 
 1. When you are satisfied with the setup of your inventory field, click **Save** for custom fields and **Save Configuration** for {{< var vm.product >}} default core fields.
 
