Move product tour folder into documentation repo

--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -43,6 +43,8 @@ listing:
     contents:
     - path: ai-governance/ai-governance-register.qmd
       image: ai-governance/ai-governance.png
+    - path: what-is-validmind/index.qmd
+      image: what-is-validmind/what-is-validmind.png
     fields: [image, title, description]
   - id: sample-notebooks
     type: default
