Add missing assets, fix SCSS, add registration page, image

--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -41,10 +41,10 @@ listing:
     image-height: 225px
     sort: false
     contents:
+    - path: what-is-validmind/what-is-validmind-register.qmd
+      image: what-is-validmind/what-is-validmind.png
     - path: ai-governance/ai-governance-register.qmd
       image: ai-governance/ai-governance.png
-    - path: what-is-validmind/index.qmd
-      image: what-is-validmind/what-is-validmind.png
     fields: [image, title, description]
   - id: sample-notebooks
     type: default
@@ -106,7 +106,7 @@ Gain **practical experience** and discover what the platform has to offer with o
 :::{#training-curriculum}
 :::
 
-## Using the product
+## User roles
 
 :::{#training-product}
 :::
