Minor heading tweak

--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -109,12 +109,12 @@ Gain **practical experience** and discover what the platform has to offer with o
 :::{#training-curriculum}
 :::
 
-## User roles
+## By user role
 
 :::{#training-product}
 :::
 
-## Use cases
+## By use case
 
 :::{#training-use-cases}
 :::
