Restructured, reworked, revitalized

--- a/site/training/what-is-validmind/what-is-validmind-register.qmd
+++ b/site/training/what-is-validmind/what-is-validmind-register.qmd
@@ -7,7 +7,7 @@ subtitle: Product Tour
 date: last-modified
 ---
 
-Take a guided tour of {{< var vm.product >}} and discover how the platform helps you manage model risk through **automated documentation**, **comprehensive testing**, and **streamlined workflows**.
+Take a guided tour of {{< var vm.product >}} and discover how the platform helps you implement **governance and oversight** through **automated documentation**, **comprehensive testing**, and **streamlined workflows**.
 
 ::: {.column-margin}
 {{< include /training/_compatibility.qmd >}}
@@ -39,10 +39,11 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 ::: {.w-100 .pa3}
 #### What you'll learn
 
-{{< fa check >}} Explore the model inventory and model registration<br>
+{{< fa check >}} Explore the inventory and registration<br>
 {{< fa check >}} Understand workflows for governance and compliance<br>
 {{< fa check >}} Discover automated documentation and testing<br>
-{{< fa check >}} Learn about ongoing monitoring and reporting
+{{< fa check >}} Learn about review, oversight, and attestation<br>
+{{< fa check >}} See analytics and monitoring in action
 
 :::
 
