--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -44,15 +44,15 @@ skip_preview: true
 :::
 
 ::: {.column width="70%" .f2 .pl3 .nt5}
-[1]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Model Inventory]{.b}
+[1]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Inventory]{.b}
 
 [2]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Workflows]{.b}
 
-[3]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Documentation, Testing & Validation]{.b}
+[3]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Documentation & Testing]{.b}
 
-[4]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Ongoing monitoring]{.b}
+[4]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Review & Oversight]{.b}
 
-[5]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Reporting]{.b}
+[5]{.ph3 .br2 .white .bg-dark-pink .smallcaps .lh-extra} — [Analytics & Monitoring]{.b}
 :::
 
 ::::
@@ -78,42 +78,42 @@ skip_preview: true
 :::
 
 
-# [1 — Model Inventory]{.hidden}{data-autoslide="12000"}
+# [1 — Inventory]{.hidden}{data-autoslide="12000"}
 
-[1]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Model Inventory]{.f2 .b}
+[1]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Inventory]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
 ::: {.column width="40%" .f3 .pr4 .pt2}
-**Regulatory expectations:**
+**Governance expectations:**
 
-> _Establish a model definition, identify model components, and recognize that model risk increases with complexity._
+> _Maintain a comprehensive registry of AI systems, models, and tools with clear ownership, classification, and dependencies._
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind offers a platform to [register models]{.highlight .b}, maintain [a comprehensive inventory]{.highlight .b}, and implement [risk-based model classification]{.highlight .b} to ensure effective model risk management.
+ValidMind offers a platform to [register items]{.highlight .b}, maintain [a comprehensive inventory]{.highlight .b}, and implement [risk-based classification]{.highlight .b} to support effective governance.
 :::
 
 ::::
 
 
-# [Model inventory]{.hidden}{data-autoslide="27500"}
+# [Inventory]{.hidden}{data-autoslide="27500"}
 
 :::: {.columns}
 
 ::: {.column width="75%" .pr4 .mt4}
-![](../assets/vm-model-inventory.gif){fig-alt="An animation of the model inventory to filter for models and change the layout" .screenshot}
+![](../assets/vm-model-inventory.gif){fig-alt="An animation of the inventory to filter for items and change the layout" .screenshot}
 :::
 
 ::: {.column width="25%" .f3 .pl4 .bl .pv4 .nt4}
-[Model Inventory]{.button-small .f4}
+[Inventory]{.button-small .f4}
 
 - Industry-aligned
 - Customizable & extensible 
-- Integrated with workflows<br>[Example: Model risk assessment]{.smallcaps .f6}
-- Link interdependent models
+- Integrated with workflows<br>[Example: Risk assessment]{.smallcaps .f6}
+- Link interdependent items
 - Filter, sort, and search
 :::
 
@@ -124,11 +124,11 @@ ValidMind offers a platform to [register models]{.highlight .b}, maintain [a com
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use the model inventory?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html) 
+[[{{< fa circle-info >}}&ensp;How do I use the inventory?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html) 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open the model inventory]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory)
+[[{{< fa rocket >}}&ensp;Open the inventory]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory)
 :::
 
 ::::
@@ -136,23 +136,23 @@ ValidMind offers a platform to [register models]{.highlight .b}, maintain [a com
 :::
 
 
-# [Model registration]{.hidden}{data-autoslide="19500"}
+# [Registration]{.hidden}{data-autoslide="19500"}
 
 :::: {.columns}
 
 ::: {.column width="60%" .pl2 .pr2}
-![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the model registration process as you step through a series of classification drop-down menus" .screenshot}
+![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot}
 :::
 
 ::: {.column width="40%" .f3 .pl4 .bl}
-[Model Registration]{.button-small .f4}݀݀
+[Registration]{.button-small .f4}
 
-- Register models and track them across their lifecycle
+- Register items and track them across their lifecycle
 - Apply predefined templates
 - Indicate business unit and use case
 - Assign a preliminary risk tier
-- Identify third-party vendor models
-- Define model interdependencies
+- Identify third-party vendors
+- Define dependencies
 
 ![Preliminary risk assessment](../assets/vm-preliminary-risk-tier.png){width="60%" fig-alt="A screenshot of risk assessment" .screenshot}
 :::
@@ -164,11 +164,11 @@ ValidMind offers a platform to [register models]{.highlight .b}, maintain [a com
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I register models?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html) 
+[[{{< fa circle-info >}}&ensp;How do I register items?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html) 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Register a new model]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory/?register=open)
+[[{{< fa rocket >}}&ensp;Register a new item]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory/?register=open)
 :::
 
 ::::
@@ -192,7 +192,7 @@ ValidMind offers a platform to [register models]{.highlight .b}, maintain [a com
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind workflows enable governance by defining [roles and responsibilities]{.highlight .b}, enforcing [policies and procedures]{.highlight .b}, and [audit trails]{.highlight .b} across the model lifecycle.
+ValidMind workflows enable governance by defining [roles and responsibilities]{.highlight .b}, enforcing [policies and procedures]{.highlight .b}, and [audit trails]{.highlight .b} across the lifecycle.
 
 :::
 
@@ -213,10 +213,10 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 ::: {.bl .pl4 .mb4}
 Clearly define roles for: 
 
-- Model owners
+- Owners
 - Developers
 - Validators
-- MRM committee
+- Governance committee
 :::
 
 [Audit Trails]{.button-small .f5} 
@@ -225,8 +225,8 @@ Clearly define roles for:
 Track all activities for:
 
 - Workflow stages
-- Model statuses
-- Findings
+- Statuses
+- Artifacts
 - Remediation plans
 - And much more
 :::
@@ -240,7 +240,7 @@ Track all activities for:
 :::: columns
 
 ::: {.column width="80%" .pr4 .nt4}
-[Workflows control the steps and transitions that guide your models through their lifecycle:]{.f3 .b}
+[Workflows control the steps and transitions that guide items through their lifecycle:]{.f3 .b}
 
 - [Predefined workflows enable out-of-the-box compliance for regulatory frameworks]{.f4}
 - [Custom workflows support any external regulation or internal policy]{.f4}
@@ -303,28 +303,23 @@ Use workflows to:
 :::
 
 
-# [3 — Documentation, Testing & Validation]{.hidden}{data-autoslide="18000"}
+# [3 — Documentation & Testing]{.hidden}{data-autoslide="18000"}
 
-[3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Documentation, Testing & Validation]{.f2 .b}
+[3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Documentation & Testing]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
 ::: {.column width="40%" .f3 .pr4 .pt2}
-**Regulatory expectations:**
+**Governance expectations:**
 
-> _Implement robust model development processes with standards for design, testing, and documentation._
-
-> _Provide ongoing, independent challenge to model development and use, ensuring findings are actioned._
-
+> _Implement robust development processes with standards for design, testing, and documentation._
 
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
 ValidMind sets a standard by [automating documentation]{.highlight .b} and providing [comprehensive testing]{.highlight .b} to ensure soundness and data quality.
-<br><br>
-ValidMind also enables validation of models through [independent review]{.highlight .b} and [process verification]{.highlight .b} that meet strict policies and regulations.
 
 :::
 
@@ -490,6 +485,29 @@ results = vm.run_development_tests()
 :::
 
 
+# [4 — Review & Oversight]{.hidden}{data-autoslide="12000"}
+
+[4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Review & Oversight]{.f2 .b}
+
+<hr>
+
+:::: {.columns}
+
+::: {.column width="40%" .f3 .pr4 .pt2}
+**Governance expectations:**
+
+> _Provide ongoing, independent challenge to development and use, ensuring artifacts are actioned._
+
+:::
+
+::: {.column width="60%" .f2 .pl2 .pr2}
+ValidMind enables [independent review]{.highlight .b} and [process verification]{.highlight .b} that meet strict policies and regulations, plus [attestation]{.highlight .b} for periodic certification.
+
+:::
+
+::::
+
+
 # [Independent review]{.hidden}{data-autoslide="24000"}
 
 :::: {.columns}
@@ -530,14 +548,14 @@ results = vm.run_development_tests()
 :::: {.columns}
 
 ::: {.column width="70%" .nl3 .nt5}
-![](../assets/vm-finding.png){fig-alt="A screenshot of a validation finding with details about severity, remediation status and documentation reference" .screenshot}
+![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot}
 :::
 
 ::: {.column width="30%" .bl .pl4 .f3 .nt4} 
 
 [Process Verification]{.button-small .f4}
 
-- Create findings with severity, risk area, and references
+- Create artifacts with severity, risk area, and references
 - Track remediation plans and monitor resolution
 - Ensure thorough checks and collaboration with developers
 - Create challenger models
@@ -566,25 +584,25 @@ Validators can use the same library as model developers:
 :::
 
 
-# [4 — Ongoing monitoring]{.hidden}{data-autoslide="6000"}
+# [5 — Analytics & Monitoring]{.hidden}{data-autoslide="6000"}
 
-[4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Ongoing monitoring]{.f2 .b}
+[5]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Analytics & Monitoring]{.f2 .b}
 
 <hr>
 
 :::: {.columns}
 
 ::: {.column width="40%" .f3 .pr4 .pt2}
-**Regulatory expectations:**
+**Governance expectations:**
 
-> _Conduct ongoing monitoring of models to ensure they remain accurate, reliable, and appropriate for their intended use, with results feeding into governance, escalation, and remediation processes._
+> _Provide comprehensive reporting and ongoing monitoring to ensure items remain accurate, reliable, and appropriate for their intended use._
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
 
-ValidMind provides [ongoing monitoring]{.highlight .b} to ensure models are performing as expected and to detect potential issues early.
+ValidMind provides [ongoing monitoring]{.highlight .b} to ensure items perform as expected and to detect potential issues early.
 
-Combine monitoring and workflows for [performance-based governance]{.highlight .b}, including scheduled revalidation cycles, event-triggered reassessments, and escalation to risk functions and committees.
+Combine monitoring and workflows for [performance-based governance]{.highlight .b}, plus [customizable dashboards]{.highlight .b} and analytics for oversight.
 :::
 
 ::::
@@ -641,29 +659,6 @@ Combine monitoring & workflows for:
 
 ::::
 
-# [5 — Reporting]{.hidden}{data-autoslide="6000"}
-
-[5]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps} — [Reporting]{.f2 .b}
-
-<hr>
-
-:::: {.columns}
-
-::: {.column width="40%" .f3 .pr4 .pt2}
-**Regulatory expectations:**
-
-> _Provide comprehensive reporting and analytics to support model risk management decisions._
-:::
-
-::: {.column width="60%" .f4 .pl2 .pr2}
-ValidMind streamlines reporting across governance, documentation, and validation with [customizable dashboards]{.highlight .b}, exportable governance artifacts, and first- and second-line reports. Built-in version control captures model activity for full audit trails.
-
-ValidMind streamlines reporting across governance, documentation, and validation with [customizable dashboards]{.highlight .b}, exportable governance artifacts, and first- and second-line reports. Built-in version control captures model activity for full audit trails.
-
-ValidMind provides reporting for compliance review governance, compliance, and model validation. Features include customizable dashboards, model and findings tracking, exportable governance and monitoring reports, and audit trails to support regulatory requirements.
-:::
-
-::::
 
 # [Analytics]{.hidden}{data-autoslide="14000"}
 
@@ -674,21 +669,21 @@ ValidMind provides reporting for compliance review governance, compliance, and m
 :::: {.columns}
 
 ::: {.column width="70%" .nl3}
-![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Findings tab, followed by a look at a sample finding before returning to the original tab" .screenshot}
+![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot}
 :::
 
 ::: {.column width="30%" .f3}
 
 ::: {.pl4 .bl .mb4 .mt4 .pt2}
-- Enable management with responsibility for the MRM framework
-- Create reports & model risk analytics
-- Perform attestation by model owners
+- Enable management with responsibility for the governance framework
+- Create reports & analytics
+- Perform attestation by owners
 :::
 
 [Internal Audit]{.button-small .f4}
 
 ::: {.pl4 .bl .mt4}
-Track findings, approvals, and sign-offs across the model lifecycle
+Track artifacts, approvals, and sign-offs across the lifecycle
 :::
 
 :::
@@ -730,18 +725,30 @@ Track findings, approvals, and sign-offs across the model lifecycle
 
 :::: {.columns}
 
-::: {.column width="30%" .pr4}
-&nbsp;
+::: {.column width="50%" .pr4}
+
+[By Role]{.button-small .f4 .mb3}
+
+[[Administrator Fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+
+[[Developer Fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+
+[[Validator Fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+
 :::
  
-::: {.column width="70%" .f2 .pl3 .pb5}
-[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns}
+::: {.column width="50%" .pl3}
 
-[[Training courses](https://docs.validmind.com/training/training.html)]{.button .shadow-5-ns}
+[By Use Case]{.button-small .f4 .mb3}
 
-[[User guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns}
+[[AI Governance Training](https://docs.validmind.com/training/ai-governance/ai-governance-register.html)]{.button .shadow-5-ns .f4}
 
-[[Developer tools](https://docs.validmind.com/developer/validmind-library.html)]{.button .shadow-5-ns}
+[[Code Samples & JupyterHub](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
+
+[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
+
+[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
+
 :::
 
 ::::
