--- a/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
+++ b/site/notebooks/EXECUTED/model_development/2-start_development_process.ipynb
@@ -811,22 +811,25 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "# Logistic Regression grid params\n",
-    "log_reg_params = {\n",
-    "    \"penalty\": [\"l1\", \"l2\"],\n",
-    "    \"C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
-    "    \"solver\": [\"liblinear\"],\n",
-    "}\n",
-    "\n",
-    "# Grid search for Logistic Regression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "grid_log_reg = GridSearchCV(LogisticRegression(), log_reg_params)\n",
+    "log_reg_params = {\n",
+    "    \"l1_ratio\": [0.0, 1.0],  # 0 = L2, 1 = L1\n",
+    "    \"C\": [0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
+    "}\n",
+    "\n",
+    "grid_log_reg = GridSearchCV(\n",
+    "    LogisticRegression(\n",
+    "        solver=\"saga\",\n",
+    "        penalty=\"elasticnet\",   # required when using l1_ratio\n",
+    "        max_iter=5000,\n",
+    "    ),\n",
+    "    log_reg_params,\n",
+    ")\n",
+    "\n",
     "grid_log_reg.fit(X_train, y_train)\n",
     "\n",
-    "# Logistic Regression best estimator\n",
-    "log_reg = grid_log_reg.best_estimator_"
+    "log_reg = grid_log_reg.best_estimator_\n"
    ]
   },
   {
