Fix output filename to get around global HTML output settings required by _metadata.yml

--- a/site/training/what-is-validmind/what-is-validmind-register.qmd
+++ b/site/training/what-is-validmind/what-is-validmind-register.qmd
@@ -5,6 +5,21 @@
 title: "What is ValidMind?"
 subtitle: Product Tour
 date: last-modified
+listing:
+  - id: what-is-validmind-modules
+    type: grid
+    grid-columns: 1
+    max-description-length: 500
+    sort: false
+    table-hover: true
+    image-align: left
+    contents:
+    - path: what-is-validmind.html
+      title: "What is ValidMind?"
+      description: "{{< fa check >}} Explore the inventory and registration<br> {{< fa check >}} Understand workflows for governance and compliance<br> {{< fa check >}} Discover automated documentation and testing<br> {{< fa check >}} Learn about review, oversight, and attestation<br> {{< fa check >}} See analytics and monitoring in action"
+      reading-time: "5"
+      author: "{{< var vm.product >}}"
+    fields: [title, subtitle, description, reading-time]
 ---
 
 Take a guided tour of {{< var vm.product >}} and discover how the platform helps you implement **governance and oversight** through **automated documentation**, **comprehensive testing**, and **streamlined workflows**.
@@ -36,16 +51,6 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-100 .pa3}
-#### What you'll learn
-
-{{< fa check >}} Explore the inventory and registration<br>
-{{< fa check >}} Understand workflows for governance and compliance<br>
-{{< fa check >}} Discover automated documentation and testing<br>
-{{< fa check >}} Learn about review, oversight, and attestation<br>
-{{< fa check >}} See analytics and monitoring in action
-
-:::
 
 ::::
 
@@ -53,11 +58,12 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 ::: {.w-100 .pa3 .tc}
 
-[Start the tour {{< fa arrow-right >}}](what-is-validmind.qmd){.button-green .cta}
-
 :::
 
 ::::
+
+:::{#what-is-validmind-modules}
+:::
 
 :::
 
