--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -7,28 +7,24 @@ subtitle: Product Tour
 favicon: ../assets/validmind.png
 format:
   revealjs:
-    revealjs-plugins: 
-      - slideover
-    autoSlide: 10000
-    autoSlideStoppable: true
-    controlsLayout: bottom-right
-    transition: zoom
-    transitionSpeed: slow
-    theme: [../assets/slides.scss, ../assets/use-cases.scss]
-    loop: true
-    help: true
     controls: true
     controls-tutorial: true
+    help: true
     controls-back-arrows: visible
-    lightbox: true
-    code-line-numbers: false
-    link-external-newwindow: true
+    transition: slide
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
-    progress: true
+    view-distance: 2
     logo: /favicon.svg
     footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    revealjs-plugins:
+      - slideover
+  html:
+    output-file: _what-is-validmind.html
+    search: false
+
 title-slide-attributes:
   data-background-image: "../assets/digitalspace-colours.svg"
   data-background-opacity: "0.8"
